--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <html>
-      Heh ngenetok wkwk
-  </html>
+      <body>
+            <h1>
+                  Heh ngenetok wkwk
+            </h1>
+      </body>
+</html>
