--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
       <body>
+            <center>
             <h1>
-                  Heh ngenetok wkwk
+                  Heh ngene tok wkwk
             </h1>
+            </center>
       </body>
 </html>
