--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
+      <head>
+            <style>
+            h1 {text-align: center;}
+            </style>
+      </head>
       <body>
-            <center>
             <h1>
                   Heh ngene tok wkwk
             </h1>
-            </center>
       </body>
 </html>
