--- a/index.html
+++ b/index.html
@@ -1,12 +1,344 @@
-<html>
-      <head>
-            <style>
-            h1 {text-align: center;}
-            </style>
-      </head>
-      <body>
-            <h1>
-                  Cahyoooo.oooo
-            </h1>
-      </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+
+    <title>For U</title>
+  </head>
+
+  <body style="height: 100%">
+    <!-- MDB -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"
+    ></script>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <!-- Content here -->
+          <!-- Button trigger modal -->
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-mdb-toggle="modal"
+            data-mdb-target="#exampleModal"
+          >
+            Klik
+          </button>
+
+          <!-- Modal Alert -->
+          <div
+            class="modal fade"
+            id="exampleModalAlert"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabelAlert"
+            aria-hidden="true"
+            style="padding-left: 2em; padding-right: 2em;"
+          >
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header justify-content-center bg-danger">
+                  <h5
+                    class="modal-title"
+                    id="exampleModalLabel"
+                    style="color: aliceblue"
+                  >
+                    No
+                  </h5>
+                </div>
+                <div class="modal-body">
+                  <h6 class="text-center">Lanjut aja dulu :v</h6>
+                </div>
+                <div class="modal-footer justify-content-center">
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    data-mdb-target="#exampleModalAlert2"
+                    data-mdb-toggle="modal"
+                    data-mdb-dismiss="modal"
+                  >
+                    Next
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Modal Alert 2 -->
+          <div
+            class="modal fade"
+            id="exampleModalAlert2"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabelAlert2"
+            aria-hidden="true"
+            style="padding-left: 2em; padding-right: 2em;"
+          >
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header justify-content-center bg-danger">
+                  <h5
+                    class="modal-title"
+                    id="exampleModalLabel"
+                    style="color: aliceblue"
+                  >
+                    Dengerin !
+                  </h5>
+                </div>
+                <div class="modal-body">
+                  <h6 class="text-center">Don't skip skip. Oke.</h6>
+                </div>
+                <div class="modal-footer justify-content-center">
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    data-mdb-target="#exampleModalAlert3"
+                    data-mdb-toggle="modal"
+                    data-mdb-dismiss="modal"
+                  >
+                    Next
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Modal Alert 3 -->
+          <div
+            class="modal fade"
+            id="exampleModalAlert3"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabelAlert3"
+            aria-hidden="true"
+            style="padding-left: 2em; padding-right: 2em;"
+          >
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header justify-content-center bg-danger">
+                  <h5
+                    class="modal-title"
+                    id="exampleModalLabel"
+                    style="color: aliceblue"
+                  >
+                    Jangan ngeyel !!!
+                  </h5>
+                </div>
+                <div class="modal-body">
+                  <h6 class="text-center">Yaudah ngulang aja</h6>
+                </div>
+                <div class="modal-footer justify-content-center">
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    data-mdb-target="#exampleModal"
+                    data-mdb-toggle="modal"
+                    data-mdb-dismiss="modal"
+                  >
+                    Next
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Modal 1-->
+          <div
+            class="modal fade"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+            style="padding-left: 2em; padding-right: 2em;"
+          >
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header justify-content-center bg-info">
+                  <h5
+                    class="modal-title"
+                    id="exampleModalLabel"
+                    style="color: aliceblue"
+                  >
+                    Allo
+                  </h5>
+                </div>
+                <div class="modal-body">
+                  <h6 class="text-center">Sorry Lama wkwk</h6>
+                </div>
+                <div class="modal-footer justify-content-center">
+                  <button
+                    type="button"
+                    class="btn btn-outline-info" data-mdb-ripple-color="dark"
+                    data-mdb-target="#exampleModalAlert"
+                    data-mdb-toggle="modal"
+                    data-mdb-dismiss="modal"
+                  >
+                    Done
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-info"
+                    data-mdb-target="#exampleModal2"
+                    data-mdb-toggle="modal"
+                    data-mdb-dismiss="modal"
+                  >
+                    Next
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Modal 2-->
+          <div
+            class="modal fade"
+            id="exampleModal2"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel2"
+            aria-hidden="true"
+            style="padding-left: 2em; padding-right: 2em;"
+          >
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header justify-content-center bg-info">
+                  <h5
+                    class="modal-title"
+                    id="exampleModalLabel"
+                    style="color: aliceblue"
+                  >
+                    Test
+                  </h5>
+                </div>
+                <div class="modal-body">
+                  <h6 class="text-center">Test Test, masuk nggak ?</h6>
+                </div>
+                <div class="modal-footer justify-content-center">
+                  <button
+                    type="button"
+                    class="btn btn-outline-info" data-mdb-ripple-color="dark"
+                    data-mdb-target="#exampleModalAlert"
+                    data-mdb-toggle="modal"
+                    data-mdb-dismiss="modal"
+                  >
+                    Done
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-info"
+                    data-mdb-target="#exampleModal3"
+                    data-mdb-toggle="modal"
+                    data-mdb-dismiss="modal"
+                  >
+                    Next
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <!-- Modal 3-->
+           <div
+           class="modal fade"
+           id="exampleModal3"
+           tabindex="-1"
+           aria-labelledby="exampleModalLabel3"
+           aria-hidden="true"
+           style="padding-left: 2em; padding-right: 2em;"
+         >
+           <div class="modal-dialog modal-dialog-centered">
+             <div class="modal-content">
+               <div class="modal-header justify-content-center bg-info">
+                 <h5
+                   class="modal-title"
+                   id="exampleModalLabel"
+                   style="color: aliceblue"
+                 >
+                   Hemm
+                 </h5>
+               </div>
+               <div class="modal-body">
+                 <h6 class="text-center">Silahkan di ganti-ganti</h6>
+               </div>
+               <div class="modal-footer justify-content-center">
+                 <button
+                   type="button"
+                   class="btn btn-outline-info" data-mdb-ripple-color="dark"
+                   data-mdb-target="#exampleModalAlert"
+                   data-mdb-toggle="modal"
+                   data-mdb-dismiss="modal"
+                 >
+                   Done
+                 </button>
+                 <button
+                   type="button"
+                   class="btn btn-info"
+                   data-mdb-target="#exampleModal4"
+                   data-mdb-toggle="modal"
+                   data-mdb-dismiss="modal"
+                 >
+                   Next
+                 </button>
+               </div>
+             </div>
+           </div>
+         </div>
+
+         <!-- Modal 4-->
+         <div
+         class="modal fade"
+         id="exampleModal4"
+         tabindex="-1"
+         aria-labelledby="exampleModalLabel4"
+         aria-hidden="true"
+         style="padding-left: 2em; padding-right: 2em;"
+       >
+         <div class="modal-dialog modal-dialog-centered">
+           <div class="modal-content">
+             <div class="modal-header justify-content-center bg-warning">
+               <h5
+                 class="modal-title"
+                 id="exampleModalLabel"
+                 style="color: aliceblue"
+               >
+                 Dah
+               </h5>
+             </div>
+             <div class="modal-body">
+               <h6 class="text-center">Wes Ah, kesel negtik :v</h6>
+             </div>
+             <div class="modal-footer justify-content-center">
+               <button
+                 type="button"
+                 class="btn btn-warning"
+                 data-mdb-toggle="modal"
+                 data-mdb-dismiss="modal"
+               >
+                 Sipp
+               </button>
+             </div>
+           </div>
+         </div>
+       </div>
+          
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
